WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119228
TextTrackRepresentation captions often disappear then appear again.
https://bugs.webkit.org/show_bug.cgi?id=119228
Summary
TextTrackRepresentation captions often disappear then appear again.
Jer Noble
Reported
2013-07-29 15:55:18 PDT
TextTrackRepresentation captions often disappear then appear again.
Attachments
Patch
(4.25 KB, patch)
2013-07-29 16:12 PDT
,
Jer Noble
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-07-29 15:55:47 PDT
<
rdar://problem/14550924
>
Jer Noble
Comment 2
2013-07-29 16:12:46 PDT
Created
attachment 207677
[details]
Patch
WebKit Commit Bot
Comment 3
2013-07-29 16:15:48 PDT
Attachment 207677
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/html/HTMLMediaElement.cpp', u'Source/WebCore/html/HTMLMediaElement.h']" exit_code: 1 Source/WebCore/html/HTMLMediaElement.h:295: The parameter name "flags" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4
2013-07-29 16:16:25 PDT
Comment on
attachment 207677
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=207677&action=review
> Source/WebCore/html/HTMLMediaElement.h:294 > + enum ConfigureTextTrackDisplayFlags { DoNotAssumeVisibleTextTracksChanged, AssumeVisibleTextTracksChanged };
"Flags" make me think this is a bitmask, and then the "flags == DoNotAssumeVisibleTextTracksChanged" code seemed iffy. Not sure I like "AssumeVisibleTextTracksChanged" etc; can you change the name to something more descriptive of the impact?
Jer Noble
Comment 5
2013-07-29 17:14:28 PDT
Committed
r153448
: <
http://trac.webkit.org/changeset/153448
>
Simon Fraser (smfr)
Comment 6
2013-07-31 20:22:29 PDT
This broke the media/video-controls-captions-trackmenu.html test
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug